crates/kply-cli/tests/snapshots/cli__demo_requires_explicit_subcommand.snap
---
source: crates/kply-cli/tests/cli.rs
expression: stderr
---
kply error: usage

Manage the local Kply demo

Usage: kply demo [OPTIONS] <COMMAND>

Commands:
  doctor    Check local prerequisites for the demo
  install   Install the baseline local demo resources
  reset     Reset the local demo resources to the baseline state
  teardown  Tear down the local demo namespace

Options:
      --json           Print placeholder output as JSON
      --quiet          Suppress nonessential human-readable output
      --verbose        Print local debugging details to stderr
      --no-color       Disable ANSI color output
      --config <PATH>  Specify an explicit configuration file path
      --no-config      Disable configuration discovery and loading
  -h, --help           Print help
