crates/kply-cli/tests/snapshots/cli__demo_reset_kubectl_failure.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 451
expression: normalize_output(&output)
---
kply error: demo reset

kubectl exited with status 7
command: kubectl apply -f <absolute-path>
stderr: fake kubectl
