crates/kply-cli/tests/snapshots/cli__demo_reset_missing_kubectl.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 466
expression: normalize_output(&output)
---
kply error: demo reset

kubectl was not found on PATH
command: kubectl
