crates/kply-cli/tests/snapshots/cli__demo_reset_missing_kubectl_json.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 482
expression: value
---
{
  "error": {
    "code": "missing_kubectl",
    "command": [
      "kubectl"
    ],
    "exit_code": 1,
    "message": "kubectl was not found on PATH",
    "stderr": ""
  }
}
