crates/kply-cli/tests/snapshots/cli__demo_teardown_json.snap
---
source: crates/kply-cli/tests/cli.rs
expression: value
---
{
  "command": "demo teardown",
  "deleted_resources": [
    "deployment,service --selector app.kubernetes.io/part-of=kply-demo"
  ],
  "namespace": "kply-demo",
  "status": "torn_down"
}
