crates/kply-cli/tests/snapshots/cli__demo_teardown_kubectl_failure.snap
---
source: crates/kply-cli/tests/cli.rs
expression: normalize_output(&output)
---
kply error: demo teardown

kubectl exited with status 7
command: kubectl -n kply-demo delete deployment,service --selector app.kubernetes.io/part-of=kply-demo --ignore-not-found --wait=true --timeout 5m
stderr: fake kubectl
